--- a/DZ4/DZ4(1)/css/style.css
+++ b/DZ4/DZ4(1)/css/style.css
@@ -48,8 +48,9 @@
     background-color: red;
     /* align-items: center; */
     margin: 0 auto;
-    transition: 5s;
+    transition: 5s linear;
     opacity: 1;
+    
 }
 
 
