--- a/DZ4/DZ4(2)/css/style.css
+++ b/DZ4/DZ4(2)/css/style.css
@@ -1,26 +1,44 @@
-.container{
+body {
+    height: 100vh;
     display: flex;
-}
-.block-left{
+    justify-content: center;
+    align-items: center;
+  }
+  .wrap {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     position: relative;
-    width: 400px;
-    height: 200px;
-    background-color:brown;
-    overflow: hidden;
-}
-.block-right{
-    width: 400px;
-    height: 200px;
-    background-color:brown;
-}
-@keyframes open{
-    0% {
-        transform: perspective(800px) rotateY(0deg);
-    }
-    100% {
-        transform: perspective(800px) rotateY(-90deg);
-    }
-}
-.block-left.open{
-    animation: open 1s forwards;
-}
+    
+    perspective: 1000px;
+  }
+  
+  h1 {
+    position: absolute;
+    z-index: -1;
+  }
+  
+  .door {
+    width: 300px;
+    height: 300px;
+  
+    background-color: #c73737;
+    border: 10px solid #952828;
+    transition: all 1s;
+  }
+  
+  .door_left {
+    transform-origin: left;
+  }
+  
+  .door_right {
+    transform-origin: right;
+  }
+  
+  .wrap:hover > .door_left {
+    transform: rotateY(50deg);
+  }
+  
+  .wrap:hover > .door_right {
+    transform: rotateY(-50deg);
+  }
