--- a/DZ5/DZ5(3)/css/style.css
+++ b/DZ5/DZ5(3)/css/style.css
@@ -9,7 +9,7 @@
 }
 .red{
     width: 230px;
-    height: 350px;
+    min-height: 350px;
     background-color: white;
     border-radius: 20px;
     box-shadow: 0px 0px 25px 3px rgba(0,0,0,0.75);
